Db Connection String

--- a/RegistrationAndLoginWebsite/appsettings.json
+++ b/RegistrationAndLoginWebsite/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "UserManagementDb": "Server=Acer; Database=UserManagementDb; Trusted_Connection=true; Integrated Security=true"
+  } 
+
+
 }
