--- a/RegistrationAndLoginWebsite/RegistrationAndLoginWebsite.csproj
+++ b/RegistrationAndLoginWebsite/RegistrationAndLoginWebsite.csproj
@@ -5,6 +5,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20191213161854_Extended_IdentityUser.cs" />
+    <Compile Remove="Migrations\20191213161854_Extended_IdentityUser.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
